# arc-demo

./: .gitignore  README.md  pyproject.toml
.github/workflows/: arc-ci-workload.yml  arc-scale-queue.yml  build-arc-runner-image.yml  ci.yml
app/: main.py
arc-runner/: Dockerfile  README.md  values-dind-overlay.yaml  values-python-uv.yaml
k8s/: cronjob.yaml  deployment.yaml  job.yaml
tests/: test_app.py
